@@ -1,3 +1,9 @@
+2013-11-28  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
+
+	* g++spec.c (TIMELIB): Define.
+	(WITHLIBC, SKIPOPT): Adjust values.
+	(lang_specific_driver): Add TIME_LIBRARY if not passed explicitly.
+
 2013-11-28  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c/59310
